2008-04-05  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (header_parse): Fixed a memory leak in the
	case of an invalid header.

2008-02-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.18

2008-03-13  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_construct_message): Changed
	content_length to an unsigned long rather than unsigned int, fixes
	bug #521872. Thanks to Pawel Salek for this fix.

2008-03-10  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_scan_mime_part_content): Don't let
	size go negative.

2008-02-10  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.17

2008-02-09  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-filter-basic.c (filter_filter): Use the new macros
	defined below.

	* gmime/gmime-utils.c (rfc2047_encode_word): Use the new macros.

	* gmime/gmime-utils.h: Added more accurate encoding-length macros
	for base64, quoted-printable, and uuencode which are try to
	minimize over-calculating the amount of output data that we
	need. Also namespaced them.

2008-02-08  Jeffrey Stedfast  <fejj@novell.com>

	* src/uudecode.c (uudecode): Use g_strchomp() on the filename
	parsed from the 'begin' line.

2008-02-07  Jeffrey Stedfast  <fejj@novell.com>

	* util/url-scanner.c (url_web_end): Handle IP address literals
	within []'s. Fixes bug #515088.

2008-02-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_uuencode_step): Optimized.

2008-02-03  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-cat.c (stream_read): Removed an extra seek.

2008-02-02  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.16

2008-02-02  Jeffrey Stedfast  <fejj@novell.com>

	Fix for https://bugzilla.novell.com/show_bug.cgi?id=333292 and
	some other bugs I discovered while fixing it.
