@@ -1,3 +1,8 @@
+2008-05-02  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-parser.c (parser_step_headers): Fix for CRLF encoded
+	input.
+
 2008-04-05  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/gmime-parser.c (header_parse): Fixed a memory leak in the
